8277964: ClassCastException with no stack trace is thrown with -Xcomp in method handle invocation